# mrcc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml  rust.yml
crates/intern/: Cargo.toml
crates/mrcc/: Cargo.toml
crates/pp/: Cargo.toml
crates/pp/src/: active_file.rs  expand.rs  file.rs  lib.rs
crates/pp/src/active_file/: lexer.rs  processor.rs
crates/pp/src/expand/: def.rs
crates/source/: Cargo.toml
crates/syntax/: Cargo.toml
diag/: Cargo.toml
diag/src/: lib.rs  render.rs
frontend/: Cargo.toml
frontend/src/: intern.rs  lib.rs  pp.rs  spos.rs
frontend/src/diag/: annotating_handler.rs  mod.rs  render.rs
frontend/src/lex/: mod.rs  punct.rs  raw.rs  token.rs  token_kind.rs
frontend/src/pp/: active_file.rs  expand.rs  file.rs  files.rs  lexer.rs  macro_info.rs  mod.rs  next.rs  state.rs
frontend/src/pp/active_file/: macro_arg_lexer.rs  mod.rs  next.rs  processor.rs  state.rs
frontend/src/pp/expand/: data.rs
frontend/src/pp/file/: macro_arg_lexer.rs  mod.rs  next.rs  processor.rs  state.rs
frontend/src/smap/: mod.rs  source.rs  tests.rs
frontend/src/smap/source/: mod.rs  tests.rs
intern/: Cargo.toml
intern/src/: lib.rs
lex/: Cargo.toml
lex/src/: lib.rs  raw.rs  token.rs  token_kind.rs
mrcc/: Cargo.toml
mrcc-lex/: Cargo.toml
mrcc-lex/src/: lib.rs  punct.rs  raw.rs  token.rs
mrcc-pp/: Cargo.toml
mrcc-pp/src/: active_file.rs  expand.rs  file.rs  lexer.rs  lib.rs  state.rs  token.rs
mrcc-source/: Cargo.toml
mrcc-source/src/: diag.rs  lib.rs  pos.rs  smap.rs
mrcc/src/: main.rs
pp/: Cargo.toml
pp/src/: file.rs  token.rs
smap/: Cargo.toml
smap/src/: lib.rs  pos.rs  tests.rs
source/: Cargo.toml
source-manager/: Cargo.toml
source-manager/src/: lib.rs  line_table.rs  pos.rs  source_pos.rs  tests.rs
source-map/: Cargo.toml
(+38 files in other folders)
