[package]
name = "frontend"
version = "0.1.0"
authors = ["Noam Raz <noamraz8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.3.2"
itertools = "0.8.2"
normalize-line-endings = "0.3.0"
rustc-hash = "1.1.0"
