[package]
name = "frontend"
version = "0.1.0"
authors = ["Noam Raz <noamraz8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.4.0"
itertools = "0.9.0"
normalize-line-endings = "0.3.0"
rustc-hash = "1.1.0"
