[package]
name = "mrcc"
version = "0.1.0"
authors = ["Noam Raz <noamraz8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"

mrcc-lex = { path = "../mrcc-lex" }
mrcc-pp = { path = "../mrcc-pp" }
mrcc-source = { path = "../mrcc-source" }
