[package]
name = "pp"
version = "0.1.0"
authors = ["Noam Raz <noamraz8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6.2"
itertools = "0.10.5"
rustc-hash = "1.1.0"

source = { path = "../source" }
lex = { path = "../lex" }
